--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,11 @@
-#production:
-#  adapter: sqlite3
-#  database: db/production.sqlite3
-#  pool: 5
-#  timeout: 5000
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  pool: 5
+  database: jdogs
+  username: root
+  password: im1coolguy
 
 development:
   adapter: mysql2
